# reqwest-studies

./: Cargo.toml  README.md
src/: main.rs
