 [package]
name = "reqwest-studies"
version = "0.1.0"
authors = ["Thiago Veronezi <thiago@veronezi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
